# E2TML

./: CMakeLists.txt  main.cpp
include/: e2ml.h  exceptions.h  values.h
src/: e2ml.cpp  lexer.cpp  parser.cpp  values.cpp
tests/: simple.e2t
